[package]
description = "Webots bindings for Rust"
edition = "2021"
exclude = ["/webots", "!/webots/Makefile", "!/webots/include", "!/webots/lib/controller", "!/webots/resources/Makefile*", "!/webots/src"]
homepage = "https://github.com/HULKs/webots-rs"
license = "MIT"
name = "webots-bindings"
version = "0.3.0"

[build-dependencies]
bindgen = "0.59"
walkdir = "2.3.2"
